# piccthermo

./: .gitignore  Cargo.toml  README.md  disable_ethernet_gadget.sh  push.sh  thermo.env  thermo.service
ds28ea00-rs/: Cargo.toml  lib.rs
ds28ea00-rs/src/: lib.rs
hdc1010-rs/: Cargo.toml
hdc1010-rs/src/: address.rs  core.rs  error.rs  lib.rs  register.rs
hdc1010/src/: register.rs
hdc3022-rs/: Cargo.toml
hdc3022-rs/src/: address.rs  core.rs  error.rs  lib.rs  register.rs
humi-tester/: Cargo.toml
humi-tester/src/: main.rs
thermo-client/: Makefile  console.c  main.c  thermo_client.c  thermo_client.h
thermo-cputemp/: Cargo.toml
thermo-cputemp/src/: main.rs
thermo-ident/: Cargo.toml
thermo-ident/src/: main.rs
thermo-server/: Cargo.toml
thermo-server/src/: cpu_sensors.rs  data_format.rs  humi_sensors.rs  main.rs  safe_mpsc.rs  serial_comm.rs  temp_sensors.rs
thermo-tester/: Cargo.toml
thermo-tester/src/: main.rs
