[package]
name = "humi-tester"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = { version = "1.0", default-features = false }
linux-embedded-hal = { version = "0.4", default-features = false, features = [
    "i2c",
] }
hdc1010 = { path = "../hdc1010-rs" }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
fixed = { version = "1.29", features = ["num-traits"] }
num-traits = "0.2"
crc32fast = "1.4"