[package]
name = "thermo-ident"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-onewire = { workspace = true, default-features = false, features = [
    "crc-table",
] }
embedded-hal = { version = "1.0", default-features = false }
ds2484 = { workspace = true }
ds28ea00 = { path = "../ds28ea00-rs" }
linux-embedded-hal = { version = "0.4", default-features = false, features = [
    "i2c",
] }
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
fixed = { version = "1.29", features = ["num-traits"] }
num-traits = "0.2"
crc32fast = "1.4"
cursive = { version = "0.21", default-features = false, features = ["termion-backend"] }
