[package]
name = "thermo-server"
version = "0.0.1"
edition = "2024"

[dependencies]
embedded-onewire = { workspace = true, default-features = false, features = [
    "crc-table",
] }
embedded-hal = { version = "1.0", default-features = false }
ds2484 = { workspace = true }
ds28ea00 = { path = "../ds28ea00-rs" }
hdc1010 = { path = "../hdc1010-rs" }
linux-embedded-hal = { version = "0.4", default-features = false, features = [
    "i2c",
] }
log = "0.4"
env_logger = "0.11"
serialport = { version = "4.7", default-features = false }
clap = { version = "4.5", features = ["derive"] }
fixed = { version = "1.29", features = ["num-traits"] }
num-traits = "0.2"
crc32fast = "1.4"
ctrlc = "3.4"
sysinfo = { version = "0.35", default-features = false, features = ["system", "component"]}
